added warning msg when the exports needed to generate code are missing